# git-internal

./: .buckconfig  .gitattributes  .gitignore  BUCK  CLAUDE.md  Cargo.toml  LICENSE  README.md  buckal.snap
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: r2cn.md
.github/workflows/: base.yml  codeql.yml  publish.yml
docs/: ARCHITECTURE.md  agent-workflow.md  agent.md  analytical-report-on-sha-256-hash-computation.md  code-of-conduct.md  contributing.md  git-object.md  git-protocol-guide.md
examples/: create_tree.rs  decode_pack.rs  encode_pack.rs  hashing.rs  http_server.rs  ssh_server.rs
src/: diff.rs  errors.rs  hash.rs  lib.rs  utils.rs
src/delta/: errors.rs  mod.rs  utils.rs
src/delta/decode/: mod.rs
src/delta/encode/: mod.rs
src/internal/: index.rs  mod.rs
src/internal/metadata/: entry_meta.rs  mod.rs
src/internal/object/: blob.rs  commit.rs  context.rs  context_frame.rs  decision.rs  evidence.rs  integrity.rs  intent.rs  intent_event.rs  mod.rs  note.rs  patchset.rs  plan.rs  plan_step_event.rs  provenance.rs  run.rs  run_event.rs  run_usage.rs  signature.rs  tag.rs  task.rs  task_event.rs  tool.rs  tree.rs  types.rs  utils.rs
src/internal/pack/: cache.rs  cache_object.rs  channel_reader.rs  decode.rs  encode.rs  entry.rs  index_entry.rs  mod.rs  pack_index.rs  utils.rs  waitlist.rs  wrapper.rs
src/internal/zlib/: mod.rs
src/internal/zlib/stream/: inflate.rs  mod.rs
src/protocol/: core.rs  http.rs  mod.rs  pack.rs  smart.rs  ssh.rs  types.rs  utils.rs
src/zstdelta/: mod.rs
tests/: README.md  decode-index-pack.rs
tests/data/index/: index-9-256
tests/data/objects/: message.txt
tests/data/packs/: encode-test-sha1.idx  encode-test-sha1.pack  encode-test-sha256.idx  encode-test-sha256.pack  medium-sha1.idx  medium-sha1.pack  medium-sha256.idx  medium-sha256.pack  ref-delta-sha1.idx  ref-delta-sha1.pack  ref-delta-sha256.idx  ref-delta-sha256.pack  small-sha1.idx  small-sha1.pack  small-sha256.idx  small-sha256.pack
tests/diff/: new.txt
