[package]
name = "git-internal"
version = "0.7.3"
edition = "2024"
authors = ["Eli Ma <genedna@gmail.com>"]
description = "High-performance Rust library for Git internal objects, Pack files, and AI-assisted development objects (Intent, Plan, Task, Run, Evidence, Decision) with delta compression, streaming I/O, and smart protocol support."
keywords = ["git", "pack", "delta", "ai-objects", "monorepo"]
categories = ["development-tools", "encoding", "parser-implementations"]
documentation = "https://libra.tools/docs/internal"
readme = "README.md"
homepage = "https://libra.tools"
repository = "https://github.com/web3infra-foundation/libra"
license = "MIT"
exclude = ["tests", ".github", ".claude", ".devcontainer", "examples"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bstr = "1.12.1"
hex = "0.4.3"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sha1 = "0.10.6"
colored = "3.1.1"
threadpool = "1.8.1"
num_cpus = "1.17.0"
dashmap = "6.1.0"
lru-mem = "0.3.0"
byteorder = "1.5.0"
futures-util = "0.3.32"
bytes = "1.11.1"
memchr = "2.8.0"
encoding_rs = "0.8.35"
rayon = "1.11.0"
ahash = "0.8.12"
diffs = "0.5.1"
libc = "0.2.183"
async-trait = "0.1.89"
futures = "0.3.32"
tokio-stream = "0.1.18"
natord = "1.0.9"
tempfile = "3.27.0"
path-absolutize = "3.1.1"
similar = "2.7.0"
sha2 = "0.10.9"
crc32fast = "1.5.0"
ring = "0.17.14"
serde_json = "1.0.149"
zstd-sys = { version = "2.0.16", features = ["experimental"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite"] }
flate2 = { version = "1.1.9", features = ["zlib"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["serde", "v4", "v7"] }
tokio = { version = "1.50.0", features = ["fs", "io-util"] }
rkyv = { version = "0.8.15", features = ["bytecheck"] }
axum = { version = "0.8.8", features = ["macros", "json"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
quickcheck = "1.1.0"
rand = "0.10.0"
chacha20 = "0.10.0"

[features]
default = ["diff_mydrs"]
diff_mydrs = []
